finalized simple time + timer chrome extension for learning purposes

--- a/options.html
+++ b/options.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <h1>Timer Extension Options</h1>
-    <input id="name-input" type="text" placeholder="Enter your name" />
+    <input  id="name-input" 
+            type="text" 
+            placeholder="Enter your name" />
+    <input  id="time-input"
+            type="number" 
+            placeholder="Enter your notification time" />
     <button id="save-button">Save</button>
 </body>
 <script src="options.js"></script>
